CMAKE_MINIMUM_REQUIRED (VERSION 3.10)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/../cmake")
add_subdirectory(.. build)
PROJECT (ATSAPP C)
add_subdirectory(../node_modules/ats-epoll ats-epoll)
add_subdirectory(../node_modules/shared_vt ats-shared_vt)
add_subdirectory(./node_modules/ats-sqlite3 ats-sqlite3)
FIND_PACKAGE (ATS REQUIRED)
IF (NOT ATS_FOUND)
	MESSAGE (FATAL_ERROR ”ATS Not Found!”)
ENDIF ()
ATS_INCLUDE (.)
ATS_INCLUDE (./node_modules)
ATS_INCLUDE (../node_modules)
INCLUDE_DIRECTORIES(../src)
INCLUDE_DIRECTORIES(./node_modules/ats-sqlite3)
set(CMAKE_C_FLAGS "-DATS_MEMALLOC_LIBC -D_DEFAULT_SOURCE -O2")
ATS_COMPILE (TEST_SRC
	tests.dats
)
ADD_EXECUTABLE(tests ${TEST_SRC})
target_link_libraries(tests ats-http pthread ats-epoll atslib ats-shared-vt ats-sqlite3)
